...
    };

    return (
      <TouchableOpacity
        style={styles.backButton}
        onPress={handleBackPress}
        testID="screen-header-back"
      >
        <ChevronLeftIcon width={24} height={24} fill={SCREEN_TEXT.primary} />
      </TouchableOpacity>
    );
  };

...
