...
  const handleAddChild = useCallback(() => {
    router.push(`/${EScreens.ChildAdd}` as any);
  }, [router]);

  return (
    <SafeAreaBgImage>
      <View testID="users-screen" style={styles.screen}>
      <ScreenHeader
        hasBackButton
        title={t('users.title')}
        containerStyle={styles.screenHeader}
      />
      <ScrollView contentContainerStyle={styles.container}>
...
