...
          weight="bold"
          style={styles.childRewardsValue}
        >
          ⭐{' '}
        </Text>
        <Text
          testID="child-rewards-balance-value"
          variant="titleMedium"
          fontFamily="fredoka"
          weight="bold"
          style={styles.childRewardsValue}
        >
          {childBalance}
...
    return (
      <TouchableOpacity
        accessibilityRole="button"
        accessibilityLabel={t('users.login')}
        onPress={handlePress}
        style={styles.userSwitch}
        testID="user-switch-button"
      >
        <Text
          testID="header-current-user-name"
          variant="bodyMedium"
          fontFamily="fredoka"
          weight="medium"
...
