...
    (): IMoreItem[] =>
      [
        {
          title: t('settings.title'),
          Icon: SettingsIcon,
          navigateTo: EScreens.Settings,
          testID: 'more-menu-settings',
        },
        {
          title: t('users.title'),
          Icon: UsersIcon,
          navigateTo: EScreens.Users,
        },
...
                  title={item.title}
                  description={item.description}
                  descriptionStyle={styles.description}
                  testID={
                    item.testID ??
                    (item.navigateTo === EScreens.Users
                      ? 'more-menu-users'
                      : undefined)
                  }
                  left={props => (
                    <item.Icon
                      {...props}
                      style={styles.icon}
...
