...
      <ScreenHeader
        hasBackButton
        title={t('settings.title')}
        containerStyle={styles.screenHeader}
      />
      <ScrollView
        testID="settings-screen"
        style={styles.scrollView}
        contentContainerStyle={styles.scrollContent}
        showsVerticalScrollIndicator={false}
        keyboardShouldPersistTaps="handled"
      >
        <SettingsSections
...
