...
      transparent
      onRequestClose={onRequestClose}
    >
      <SafeAreaView style={styles.backdropContainer}>
        <Pressable style={styles.backdrop} onPress={onRequestClose} />

        <View style={styles.sheet} testID="select-users-modal">
          <View style={styles.header}>
            <Text variant="titleMedium" weight="bold">
              {t('users.select_user_please')}
            </Text>
            <IconButton
              Icon={<CloseIcon width={24} height={24} fill={Colors.grey500} />}
...
