...
        isVisible={isPinModalVisible}
        onRequestClose={closePinModal}
        onComplete={handlePinComplete}
        title={passwordTitle}
        errorMessage={passwordError ?? undefined}
        maxLength={4}
        testID="user-switch-pin-modal"
        pinInputTestID="user-switch-pin"
      />

      <GesturePasswordModal
        isVisible={isGestureModalVisible}
        onRequestClose={closeGestureModal}
...
